--- a/appSqlServer/appSqlServer/pom.xml
+++ b/appSqlServer/appSqlServer/pom.xml
@@ -10,6 +10,8 @@
 	<description>Aplicacion para tp base de datos</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
